<resources>
    <string name="app_name">NutriForagePractice</string>


    <string name="home_text">Home</string>
    <string name="log_text">Food Log</string>
    <string name="camera_text">Camera</string>
    <string name="list_text">Shopping List</string>
    <string name="profile_text">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_content_desc">Image Content</string>
    <string name="btn_capture">Take a Picture</string>
    <string name="settings_text">Settings</string>
    <string name="settings_select">English</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_language">Language</string>
    <string name="profile_emailAdd">nutriforage@example.com</string>
    <string name="profile_number">0900-000-0000</string>
    <string name="profile_age">21</string>
    <string name="profile_height">163cm</string>
    <string name="profile_weight">60kg</string>
    <string name="profile_avatartext">Profile Avatar</string>
    <string name="profile_email">NutriForage</string>
    <string name="profile_helpcenter">Help Center</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_editprofile">Edit Profile</string>
    <string name="profile_logout">Log Out</string>
    <string name="profile_email_text">Email</string>
    <string name="profile_mobile_text">Mobile Number</string>
    <string name="profile_age_text">Age</string>
    <string name="profile_height_text">Height</string>
    <string name="profile_weight_text">Weight</string>


    <string name="search_text">Search</string>


    <!-- Recipes!!! -->

    <string name="chicken_adobo_text">Authentic chicken adobo is usually made with chicken thighs and legs, served over white rice.</string>
    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>


</resources>