<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_bg"
    tools:context=".Settings">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_white"
        android:padding="20dp"
        android:text="@string/settings_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="TextContrastCheck" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggle_switch"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/button_round_green"
        android:padding="10dp"
        android:text="@string/settings_notifications"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:thumb="@drawable/thumb"
        app:track="@drawable/track" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_round_green"
        android:backgroundTint="@null"
        android:padding="5dp">

        <TextView
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-36dp"
            android:text="@string/settings_language"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="150dp"
            android:hint="@string/settings_select"
            android:inputType="none"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>