<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:elevation="5dp"
    tools:context=".ProfileFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_bg">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="100dp"
                        android:contentDescription="@string/profile_avatartext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/textView_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/profile_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/textView_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_email"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView_name"
                        app:layout_constraintStart_toStartOf="@+id/textView_name"
                        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="420dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/bg_default_input"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_email">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="30dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_password_text"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/profile_pw"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_password"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="#F1F2EB" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_mobile_text"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/profile_mobile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_number"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="#F1F2EB" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_age"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_age_text"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/profile_age"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_age"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/divider3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="#F1F2EB" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_height"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_height_text"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/profile_height"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_height"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/divider4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="#F1F2EB" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_weight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_weight_text"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/profile_weight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_weight"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/divider5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="#F1F2EB" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/profile_settings"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/button_round"
                                android:elevation="5dp"
                                android:orientation="vertical"
                                android:paddingTop="10dp">

                                <TextView
                                    android:id="@+id/textView5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingBottom="5dp"
                                    android:text="@string/profile_settings"
                                    android:textAlignment="center"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/profile_logOut"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@drawable/button_round"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:paddingTop="7dp"
                                    android:text="@string/profile_logout"
                                    android:textAlignment="center"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/profile_helpcenter"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@drawable/button_round"
                                android:elevation="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:paddingTop="7dp"
                                    android:text="@string/profile_helpcenter"
                                    android:textAlignment="center"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back_pressed_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:foregroundGravity="center"
            android:padding="15dp"
            android:src="@drawable/back_button_icon" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>